--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@
   
   body {
     margin: 0;
-    font-family: "Comic Sans MS";
+    font-family: "Kozuka Mincho Pro";
   }
 
 /* ----------------------------HEADER------------------------------- */
@@ -24,21 +24,72 @@
   }
 
 /* ----------------------------MAIN TOP------------------------------- */
-  .top-container{
-      max-width: 1366px;
-      width:100%;
-      padding: 0px 12px;
-      margin: 0 auto;
-  }
-
   .top-wrapper{
-      padding: 100px 40px 80px 40px;
-      width: 1366px;
-      height: 500px;
+      padding: 50px 0px 80px 0px;
+      max-width: 1366px;
+      height: 800px;
       background-image: url(https://raw.githubusercontent.com/alvinadjie/ceb13/master/background.jpg);
       background-size: cover;
   }
   
+  .top-container{
+    width:100%;
+    height:500px;
+    padding:0px 70px;
+    display:flex;
+    
+  }
+  
+  .text-container{
+    opacity:0.9;
+    width:100%;
+    padding-top:150px;
+    padding-left:50px;
+  }
+  
+  .text-container h1{
+    font-weight:1000;
+    font-size:30px;
+    padding-bottom:10px;
+  }
+  
+  .text-container p{
+    width:100%;
+    font-size:20px;
+    line-height:30px;
+    text-align:left;
+    padding-bottom:10px
+  }
+  
+  span{
+    color:red;
+    font-weight:1000;
+  }
+  
+  .image-container{
+    padding-top:20px;
+    width:100%;
+    padding-left:50px;
+    display:flex;
+    flex-direction:column;
+    
+  }
+  
+  .image{
+    width:380px;
+    height:200px;
+    padding-bottom:30px;
+  }
+  
+  .left{
+    width:100%;
+    padding-right:120px;
+  }
+  
+  .right{
+    width:100%;
+    padding-left:150px;
+  }
 
 
 /* ----------------------------MAIN MIDDLE------------------------------- */
