--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,7 +28,7 @@
       padding: 50px 0px 80px 0px;
       max-width: 1366px;
       height: 800px;
-      background-image: url(https://raw.githubusercontent.com/alvinadjie/ceb13/master/background.jpg);
+      background-image: url(https://github.com/alvinadjie/ceb13/blob/master/background.jpg?raw=true);
       background-size: cover;
   }
   
