--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@
   
   body {
     margin: 0;
-    font-family: "Kozuka Mincho Pro";
+    font-family: "TW Cen MT";
   }
 
 /* ----------------------------HEADER------------------------------- */
@@ -25,7 +25,7 @@
 
 /* ----------------------------MAIN TOP------------------------------- */
   .top-wrapper{
-      padding: 50px 0px 80px 0px;
+      padding: 20px 0px 80px 0px;
       max-width: 1366px;
       height: 800px;
       background-image: url(https://github.com/alvinadjie/ceb13/blob/master/background.jpg?raw=true);
@@ -34,10 +34,20 @@
   
   .top-container{
     width:100%;
-    height:500px;
+    height:450px;
     padding:0px 70px;
     display:flex;
     
+  }
+
+  .banner{
+      background-color: rgba(255, 255, 255, 0.7);
+      width:100%;
+      height:100px;
+      text-align: center;
+      letter-spacing: 15px;
+      line-height: 100px;
+      position:relative;
   }
   
   .text-container{
@@ -51,13 +61,14 @@
     font-weight:1000;
     font-size:30px;
     padding-bottom:10px;
+    text-align: center;
   }
   
   .text-container p{
     width:100%;
     font-size:20px;
     line-height:30px;
-    text-align:left;
+    text-align:center;
     padding-bottom:10px
   }
   
@@ -77,7 +88,7 @@
   
   .image{
     width:380px;
-    height:200px;
+    height:180px;
     padding-bottom:30px;
   }
   
