--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
   }
-  
+
   body {
     margin: 0;
     font-family: "Kozuka Mincho Pro";
@@ -31,28 +31,28 @@
       background-image: url(https://github.com/alvinadjie/ceb13/blob/master/background.jpg?raw=true);
       background-size: cover;
   }
-  
+
   .top-container{
     width:100%;
     height:500px;
     padding:0px 70px;
     display:flex;
-    
+
   }
-  
+
   .text-container{
     opacity:0.9;
     width:100%;
     padding-top:150px;
     padding-left:50px;
   }
-  
+
   .text-container h1{
     font-weight:1000;
     font-size:30px;
     padding-bottom:10px;
   }
-  
+
   .text-container p{
     width:100%;
     font-size:20px;
@@ -60,32 +60,32 @@
     text-align:left;
     padding-bottom:10px
   }
-  
+
   span{
     color:red;
     font-weight:1000;
   }
-  
+
   .image-container{
     padding-top:20px;
     width:100%;
     padding-left:50px;
     display:flex;
     flex-direction:column;
-    
+
   }
-  
+
   .image{
     width:380px;
     height:200px;
     padding-bottom:30px;
   }
-  
+
   .left{
     width:100%;
     padding-right:120px;
   }
-  
+
   .right{
     width:100%;
     padding-left:150px;
@@ -105,3 +105,20 @@
 
 
 /* ----------------------------FOOTER------------------------------- */
+footer {
+  width: 100%;
+}
+
+.footer-left {
+  float: left;
+  text-align: center;
+  padding: 40px 40px;
+  margin-left: 100px;
+}
+
+.footer-right {
+  float: right;
+  padding: 40px 40px;
+  text-align: center;
+  margin-right: 100px;
+}
