--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,111 +1,154 @@
 * {
-    box-sizing: border-box;
-  }
-  
-  body {
-    margin: 0;
-    font-family: "TW Cen MT";
-  }
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: "TW Cen MT";
+}
 
 /* ----------------------------HEADER------------------------------- */
-  header {
-    height: 45px;
-    width: 100%;
-    background-color: rgba(0, 75, 90, 0.9);
-    position :fixed;
-    top: 0;
-    z-index: 10;
-  }
+header {
+  height: 45px;
+  width: 100%;
+  background-color: rgba(0, 75, 90, 0.9);
+  position :fixed;
+  top: 0;
+  z-index: 10;
+}
 
-  .logo a{
-      display:inline;
-      text-decoration: none;
-      color: white;
-  }
+.logo a{
+    display:inline;
+    text-decoration: none;
+    color: white;
+}
 
 /* ----------------------------MAIN TOP------------------------------- */
-  .top-wrapper{
-      padding: 20px 0px 80px 0px;
-      max-width: 1366px;
-      height: 800px;
-      background-image: url(https://github.com/alvinadjie/ceb13/blob/master/background.jpg?raw=true);
-      background-size: cover;
-  }
-  
-  .top-container{
-    width:100%;
-    height:450px;
-    padding:0px 70px;
-    display:flex;
-    
-  }
+.top-wrapper{
+    padding: 20px 0px 80px 0px;
+    max-width: 1366px;
+    height: 800px;
+    background-image: url(https://github.com/alvinadjie/ceb13/blob/master/background.jpg?raw=true);
+    background-size: cover;
+}
 
-  .banner{
-      background-color: rgba(255, 255, 255, 0.7);
-      width:100%;
-      height:100px;
-      text-align: center;
-      letter-spacing: 15px;
-      line-height: 100px;
-      position:relative;
-  }
+.top-container{
+  width:100%;
+  height:450px;
+  padding:0px 70px;
+  display:flex;
   
-  .text-container{
-    opacity:0.9;
+}
+
+.banner{
+    background-color: rgba(255, 255, 255, 0.7);
     width:100%;
-    padding-top:150px;
-    padding-left:50px;
-  }
-  
-  .text-container h1{
-    font-weight:1000;
-    font-size:30px;
-    padding-bottom:10px;
+    height:100px;
     text-align: center;
-  }
+    letter-spacing: 15px;
+    line-height: 100px;
+    position:relative;
+}
+
+.text-container{
+  opacity:0.9;
+  width:100%;
+  padding-top:150px;
+  padding-left:50px;
+}
+
+.text-container h1{
+  font-weight:1000;
+  font-size:30px;
+  padding-bottom:10px;
+  text-align: center;
+}
+
+.text-container p{
+  width:100%;
+  font-size:20px;
+  line-height:30px;
+  text-align:center;
+  padding-bottom:10px
+}
+
+span{
+  color:red;
+  font-weight:1000;
+}
+
+.image-container{
+  padding-top:20px;
+  width:100%;
+  padding-left:50px;
+  display:flex;
+  flex-direction:column;
   
-  .text-container p{
-    width:100%;
-    font-size:20px;
-    line-height:30px;
-    text-align:center;
-    padding-bottom:10px
-  }
-  
-  span{
-    color:red;
-    font-weight:1000;
-  }
-  
-  .image-container{
-    padding-top:20px;
-    width:100%;
-    padding-left:50px;
-    display:flex;
-    flex-direction:column;
-    
-  }
-  
-  .image{
-    width:380px;
-    height:180px;
-    padding-bottom:30px;
-  }
-  
-  .left{
-    width:100%;
-    padding-right:120px;
-  }
-  
-  .right{
-    width:100%;
-    padding-left:150px;
-  }
+}
+
+.image{
+  width:380px;
+  height:180px;
+  padding-bottom:30px;
+}
+
+.left{
+  width:100%;
+  padding-right:120px;
+}
+
+.right{
+  width:100%;
+  padding-left:150px;
+}
 
 
 /* ----------------------------MAIN MIDDLE------------------------------- */
+.lesson-wrapper {
+  height: 500px;
+  padding-bottom: 80px;
+  background-color: #f7f7f7;
+  /* Ubah property text-align ke center */
+  text-align: center;
+}
 
+.heading {
+  padding-top: 60px;
+  padding-bottom: 30px;
+  color: #5f5d60;
+}
 
+.heading h2 {
+  font-weight: normal;
+}
+
+.lesson {
+  float: left;
+  width: 25%;
+}
+
+/* Tambahkan CSS untuk lesson-icon */
+.lesson-icon {
+  position: relative;
+}
+
+/* Tambahkan CSS untuk tag <p> didalam lesson-icon */
+.lesson-icon p {
+  position: absolute;
+  top: 90px;
+  width: 100%;
+  color: white;
+}
+
+/* Tambahkan CSS untuk txt-contents */
+.txt-contents {
+  width: 80%;
+  display: inline-block;
+  margin-top: 20px;
+  font-size: 15px;
+  color: #b3aeb5;
+  
+}
 
 
 
