--- a/stylesheet.css
+++ b/stylesheet.css
@@ -50,6 +50,18 @@
       position:relative;
   }
   
+  .banner h1{
+    font-size:32px;
+    text-shadow: 0 0 #CB2402, .08em 0 0 #fff, 0 0, -.08em 0 0 #fff;
+    background: linear-gradient(#999, #999) center 2.09em no-repeat;
+    background-size: 0% 3px;
+    transition: .3s ease;
+  }
+  
+  .banner h1:hover{
+    background-size: 75% 2px;
+  }
+  
   .text-container{
     opacity:0.9;
     width:100%;
@@ -90,6 +102,7 @@
     width:380px;
     height:180px;
     padding-bottom:30px;
+    transition:1s ease;
   }
   
   .left{
