--- a/stylesheet.css
+++ b/stylesheet.css
@@ -184,11 +184,53 @@ padding-left:150px;
 
 
 /* ----------------------------MAIN BOTTOM------------------------------- */
-
-
-
-
-
+.contentG{
+  width: 100vw;
+  height: 45vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.slider-wrapper{
+  font-size: 40px;
+  color: #aaa;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.slider{
+  height: 50px;
+  padding-left: 15px;
+  overflow: hidden;
+}
+.slider div{
+  color: #fff;
+  height: 50px;
+  margin-bottom: 50px;
+  padding: 2px 15px;
+  text-align: center;
+  box-sizing: border-box;
+}
+.slider-text1{
+  background: mediumspringgreen;
+  animation: slide 6s linear infinite;
+}
+.slider-text2{
+  background: skyblue;
+}
+.slider-text3{
+  background: lightcoral;
+}
+@keyframes slide {
+  0% {margin-top: -300px;}
+  5% {margin-top: -200px;}
+  33% {margin-top: -200px;}
+  38% {margin-top: -100px;}
+  66% {margin-top: -100px;}
+  71% {margin-top: 0px;}
+  100% {margin-top: 0px;}     
+}
 /* ----------------------------FOOTER------------------------------- */
 footer {
   width: 100%;
