--- a/responsive.css
+++ b/responsive.css
@@ -1,32 +1,77 @@
 /* Untuk Tablet */
 @media all and (max-width: 1000px) {
     .banner{
-       background-color: rgba(255, 255, 255, 0.7);
-       width:100%;
-       height:100px;
-       text-align: center;
-       letter-spacing: 10px;
-       line-height: 100px;
-       position:relative;
-   }
+        height:80px;
+        letter-spacing: 5px;
+    }
    
     .banner h1{
-     font-size:21px;
-     padding-top:10px;
-     text-shadow: 0 0 #CB2402, .08em 0 0 #fff, 0 0, -.08em 0 0 #fff;
-     background: linear-gradient(#999, #999) center 3.6em no-repeat;
-     background-size: 0% 3px;
-     transition: .3s ease;
-   }
+        font-size:21px;
+        padding-top:0px;
+        background: linear-gradient(#999, #999) center 3.0em no-repeat;
+        background-size: 0% 3px;
+    }
+
+    .text-container h1{
+        font-size:40px;
+        margin-bottom:20px;
+    }
+
+    .text-container p{
+        font-size:24px;
+        margin-bottom:15px;
+        line-height: 20px;
+    }
+
+    a {
+        font-weight: bold;
+        font-size: 24px;
+    }
+
+    .top-wrapper {
+        height: 550px;
+    }
+
+    .lesson {
+        width: 50%;
+    }
  }
  
  /* Untuk Smartphone */
  @media all and (max-width: 670px) {
-   .header-right {
-     display: none;
-   }
-   
-   .menu-icon {
-     display: block;
-   }
+    .banner h1 {
+        font-size: 15px;
+        padding-top: 0px;
+        background: linear-gradient(#999, #999) center 4.2em no-repeat;
+        background-size: 0% 3px;
+    }
+
+    .top-container{
+        display: block;
+    }
+
+    .text-container {
+        width:100%;
+        padding-left: 0px;
+        margin: auto;
+    }
+
+    .text-container h1{
+        text-align: center;
+    }
+
+    .text-container p{
+        text-align: center;
+    }
+    
+    .image-container {
+        padding-top: 20px;
+        width: 50%;
+        height: 100%;
+        padding-left: 50px;
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+    }
+
  }
