--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,6 +6,9 @@
     margin: 0;
     font-family: "TW Cen MT";
   }
+a{
+    text-decoration: none;
+}
 
 /* ----------------------------HEADER------------------------------- */
 header {
@@ -15,31 +18,41 @@ header {
   position :fixed;
   top: 0;
   z-index: 10;
+  float:left;
+  transition: 1s ease;
 }
 
-.logo p {
-    font-weight: bold;
-    color: white;
-    text-align: center;
-    font-size: 24px;
-    opacity: 0.8;
-    line-height: 0.01;
-    letter-spacing: 10px;
+.img-logo{
+    height:100%;
+    width: 100%;
+    padding: 8px 5px;    
+}
+
+.logo{
+    text-align:center;
+    transition: 1s, ease-in;
+    width:60px;
+    height:40px;
+}
+
+header:hover{
+    background-color: rgba(247, 0, 0, 0.9);
 }
 
 /* ----------------------------MAIN TOP------------------------------- */
 
 .top-wrapper{
     padding: 20px 0px 80px 0px;
-    max-width: 1366px;
-    height: 800px;
+    max-width: 1336px;
+    height: 750px;
     background-image: url(https://github.com/alvinadjie/ceb13/blob/master/background.jpg?raw=true);
     background-size: cover;
 }
 
 .top-container{
   width:100%;
-  height:450px;
+  position: relative;
+  height:500px;
   padding:0px 70px;
   display:flex;
 
@@ -57,85 +70,89 @@ header {
 
 .text-container{
   opacity:0.9;
-  width:100%;
-  padding-top:150px;
+  width:50%;
+  height:100%;
+  padding-top:40px;
   padding-left:50px;
 }
 
 .text-container h1{
   font-weight:1000;
-  font-size:30px;
-  padding-bottom:10px;
-  text-align: center;
+  font-size:60px;
+  padding-bottom:5px;
+  text-align: left;
+  margin-bottom:25px;
+  margin-top:10px;
 }
 
 .text-container p{
   width:100%;
-  font-size:20px;
+  font-size:30px;
   line-height:30px;
-  text-align:center;
-  padding-bottom:10px
+  text-align:left;
+  padding-bottom:5px;
+  margin-bottom:20px;
+  margin-top:5px;
+  line-height: 40px;
 }
 
-span{
-  color:red;
+a{
   font-weight:1000;
+  font-size:38px;
+  background-color: rgba(247, 0, 0, 1);
+  color:rgba(255, 255, 255, 1);
+  border-radius: 5px;
+  padding: 0px 4px;
+  transition: all .5s;
+}
+
+a:hover{
+    color:rgba(247, 0, 0, 1);
+    background-color: rgba(0, 0, 0, 0);
 }
 
 .image-container{
   padding-top:20px;
-  width:100%;
+  width:50%;
+  height:100%;
   padding-left:50px;
   display:flex;
   flex-direction:column;
 
 }
 
-  .top-wrapper{
-      padding: 20px 0px 80px 0px;
-      max-width: 1366px;
-      height: 800px;
-      background-image: url(https://github.com/alvinadjie/ceb13/blob/master/background.jpg?raw=true);
-      background-size: cover;
-  }
-
-.banner{
-    background-color: rgba(255, 255, 255, 0.7);
-    width:100%;
-    height:100px;
-    text-align: center;
-    letter-spacing: 15px;
-    line-height: 100px;
-    position:relative;
-}
-
 .banner h1{
 font-size:32px;
 text-shadow: 0 0 #CB2402, .08em 0 0 #fff, 0 0, -.08em 0 0 #fff;
 background: linear-gradient(#999, #999) center 2.09em no-repeat;
-background-size: 0% 3px;
+background-size: 0% 4px;
 transition: .3s ease;
 }
 
 .banner h1:hover{
-background-size: 75% 2px;
+background-size: 90% 2px;
 }
 
 .image{
-width:380px;
-height:180px;
-padding-bottom:30px;
+width:45%;
+margin-bottom:10px;
 transition:1s ease;
 }
 
-.left{
+.container-left{
 width:100%;
-padding-right:120px;
+}
+
+.left{
+    float:left;
+}
+
+.container-right{
+width:100%;
 }
 
 .right{
-width:100%;
-padding-left:150px;
+    float:right;
 }
 
 /* ----------------------------MAIN MIDDLE------------------------------- */
@@ -189,7 +206,7 @@ padding-left:150px;
 
 /* ----------------------------MAIN BOTTOM------------------------------- */
 .contentG{
-  width: 100vw;
+  width: 98vw;
   height: 45vh;
   display: flex;
   align-items: center;
@@ -238,7 +255,7 @@ padding-left:150px;
 /* ----------------------------FOOTER------------------------------- */
 footer {
   width: 100%;
-  border-top: 1px solid #82ccdd
+  border-top: 2px solid #82ccdd;
 }
 
 .footer-left {
