--- a/responsive.css
+++ b/responsive.css
@@ -68,12 +68,12 @@
     }
 
     .image-container {
-        padding-top: 20px;
+        /* padding-top: 20px;
         width: 100%;
         padding-left: 0px;
         display: flex;
-        flex-direction: row;
-        
+        flex-direction: row; */
+        display:none;
     }
 
     .image{
