--- a/stylesheet.css
+++ b/stylesheet.css
@@ -60,7 +60,7 @@ header:hover{
 
 .top-wrapper{
     padding: 20px 0px 80px 0px;
-    max-width: 1336px;
+    width:100%;
     height: 750px;
     background-image: url(https://github.com/alvinadjie/ceb13/blob/master/background.jpg?raw=true);
     background-size: cover;
