--- a/stylesheet.css
+++ b/stylesheet.css
@@ -87,7 +87,7 @@ header:hover{
 
 .text-container{
   opacity:0.9;
-  width:50%;
+  width:100%;
   height:100%;
   padding-top:40px;
   padding-left:50px;
@@ -116,7 +116,6 @@ header:hover{
 a{
   font-weight:1000;
   font-size:38px;
-  background-color: rgba(247, 0, 0, 1);
   color:rgba(255, 255, 255, 1);
   border-radius: 5px;
   padding: 0px 4px;
@@ -144,7 +143,8 @@ a:hover{
 .image-container{
   padding-top:20px;
   width:50%;
-  height:100%;
+  height:auto;
+  overflow: hidden;
   padding-left:50px;
   display:flex;
   flex-direction:column;
@@ -164,9 +164,10 @@ background-size: 90% 2px;
 }
 
 .image{
-width:45%;
+width:38%;
 margin-bottom:10px;
 transition:1s ease;
+position:relative;
 }
 
 .container-left{
@@ -215,7 +216,12 @@ width:100%;
 .lesson-icon {
   position: relative;
 }
-
+ .lesson-icon img{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+ }
+ .lesson-icon img:hover{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.35);
+ }
 /* Tambahkan CSS untuk tag <p> didalam lesson-icon */
 .lesson-icon p {
   position: absolute;
@@ -251,6 +257,7 @@ width:100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding:20px;
 }
 .slider{
   height: 50px;
