--- a/stylesheet.css
+++ b/stylesheet.css
@@ -116,7 +116,7 @@ header:hover{
 a{
   font-weight:1000;
   font-size:38px;
-  color:rgba(255, 255, 255, 1);
+  color:rgb(255, 71, 71);
   border-radius: 5px;
   padding: 0px 4px;
   transition: all .5s;
